# MapleGarlicEngine

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  build.zig  build.zig.zon  helloTriangle.cpp  helloTriangle.cxx  main.cxx
shaders/: shader.frag.glsl  shader.vert.glsl  vertexBuffer.slang
src/: Device.cxx  Device.hxx  MapleGarlicEngine.ixx  MapleGarlicEngineWindow.cxx  MapleGarlicEngineWindow.hxx  Pipeline.cxx  Pipeline.hxx  app.cxx  app.hxx  bindings.cpp  bindings.h  helloTriangle.cxx  helloTriangle.hxx  main.cpp  main.cxx  main.zig
